--- a/.github/workflows/ForumWebApi20240420163044.yml
+++ b/.github/workflows/ForumWebApi20240420163044.yml
@@ -1,17 +1,17 @@
-name: Build and deploy .NET Core application to Web App dss-a
+name: Build and deploy .NET Core application to Web App ForumWebApi20240420163044
 on:
   push:
     branches:
     - main
 env:
-  AZURE_WEBAPP_NAME: dss-a
-  AZURE_WEBAPP_PACKAGE_PATH: Forum.Web.Api/publish
+  AZURE_WEBAPP_NAME: ForumWebApi20240420163044
+  AZURE_WEBAPP_PACKAGE_PATH: Forum.Web.Api\publish
   CONFIGURATION: Release
-  DOTNET_CORE_VERSION: 6.0.x
+  DOTNET_CORE_VERSION: 8.0.x
   WORKING_DIRECTORY: Forum.Web.Api
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET SDK
@@ -32,7 +32,7 @@ jobs:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     steps:
     - name: Download artifact from build job
@@ -44,5 +44,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.dss_a_DB85 }}
+        publish-profile: ${{ secrets.ForumWebApi20240420163044_69FA }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
